added source code and console log clear out

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
         <script src="libraries/p5.js"></script>
         <script src="libraries/p5.dom.js"></script>
         <script src="timer_algos.js"></script>
-        <script src="libraries/p5.sound.js"></script>
         <script src="algorithms.js"></script>
         <script src="sketch.js"></script>
 
@@ -29,7 +28,7 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="#">Data size</a>
+                    <a href ="#">Data size</a>
                     <input
                         class="range-input"
                         type="range"
@@ -37,7 +36,7 @@
                         max="60"
                         value="42"
                         class="slider"
-                        id="size"
+                        id="data_size"
                     />
                 </li>
                 <li>
@@ -52,8 +51,9 @@
                         id="frm"
                     />
                 </li>
-                <li><a href="#" id="time">time: 0us </a></li>
-                <li><a href="#" class="clickable" id="reset">reset</a></li>
+                <li><a href="#" id="time">Time: -- </a></li>
+                <li><a href="#" class="clickable" id="reset">Reset</a></li>
+                <li><a href="https://github.com/shubh67678/sorting-visualizer.git" class="clickable" >Source Code</a></li>
             </ul>
         </nav>
     </body>
